--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           </div>
         </section>
 
-        <section class="gallery-section">
+        <section class="gallery-section" id="galery">
           <div class="card">
             <div class="card-header">
               <h2>Galeria de Imagens</h2>
@@ -202,8 +202,8 @@
                 <img src="./imagens/imagem1.png" alt="Imagem de plantação de alface na hidroponia" />
               </div>
               <div>
-                <a href="#" class="close">Fechar</a>
-                <a href="#" class="back">Voltar</a>
+                <a href="#galery" class="close">Fechar</a>
+                <a href="#galery" class="back">Voltar</a>
               </div>
             </div>
           </div>
@@ -213,8 +213,8 @@
                 <img src="./imagens/imagem8.png" alt="Imagem de plantação de cebolinha" />
               </div>
               <div>
-                <a href="#" class="close">Fechar</a>
-                <a href="#" class="back">Voltar</a>
+                <a href="#galery" class="close">Fechar</a>
+                <a href="#galery" class="back">Voltar</a>
               </div>
             </div>
           </div>
@@ -224,8 +224,8 @@
                 <img src="./imagens/imagem3.png" alt="Imagem de abacaxizeiro" />
               </div>
               <div>
-                <a href="#" class="close">Fechar</a>
-                <a href="#" class="back">Voltar</a>
+                <a href="#galery" class="close">Fechar</a>
+                <a href="#galery" class="back">Voltar</a>
               </div>
             </div>
           </div>
@@ -235,8 +235,8 @@
                 <img src="./imagens/imagem4.png" alt="Imagem de Plantações em horta" />
               </div>
               <div>
-                <a href="#" class="close">Fechar</a>
-                <a href="#" class="back">Voltar</a>
+                <a href="#galery" class="close">Fechar</a>
+                <a href="#galery" class="back">Voltar</a>
               </div>
             </div>
           </div>
@@ -246,8 +246,8 @@
                 <img src="./imagens/imagem7.jpeg" alt="Imagem de plantação de cebolinha na hidroponia" />
               </div>
               <div>
-                <a href="#" class="close">Fechar</a>
-                <a href="#" class="back">Voltar</a>
+                <a href="#galery" class="close">Fechar</a>
+                <a href="#galery" class="back">Voltar</a>
               </div>
             </div>
           </div>
@@ -257,8 +257,8 @@
                 <img src="./imagens/imagem6.jpeg" alt="Imagem de plantação de alface" />
               </div>
               <div>
-                <a href="#" class="close">Fechar</a>
-                <a href="#" class="back">Voltar</a>
+                <a href="#galery" class="close">Fechar</a>
+                <a href="#galery" class="back">Voltar</a>
               </div>
             </div>
           </div>
