feat-adicionando-intro/alterando-readme

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <label class="check" for="darkModeCheckbox"></label>
     <div>
       <div class="dark-mode">
+        <div id="intro"><h1>Agrinho: do campo à cidade, colhendo oportunidades.</h1></div>
         <section class="intro-section" id="inicio">
           <div class="title">
             <h1>Bem-vindo à Evolução da Tecnologia no Campo</h1>
