--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
 
             <div id="field-rain">
-              <div class="content-grid-animate"> <!--  //container -->
+              <div class="content-grid-animate"> 
                 <div class="nuvem">
                   <div class='thunder-container'>
                     <div class='thunder1'></div>
